objects/Authorized_Product__c.object
<CustomObject>
    <description>Products authorized by distributor</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Products_Authorized</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Product_Line__r.Business_Unit_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>IF(
 ISPICKVAL( Account__r.Channel__c , &quot;Distributor&quot;), &quot;Distributor&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dist_Territory__c</fullName>
        <label>Dist Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Country__c</fullName>
        <label>Distribution Country</label>
        <picklist>
            <controllingField>Distribution_Region__c</controllingField>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amer.Virgin Is</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua/Barbud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution_Region__c</fullName>
        <label>Distribution Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution_Territory__c</fullName>
        <label>Distribution State</label>
        <picklist>
            <controllingField>Distribution_Country__c</controllingField>
            <picklistValues>
                <fullName>ALABAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALASKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBERTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIZONA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARKANSAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARKANSAS (Eastern third)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRITISH COLUMBIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLORADO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONNECTICUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELAWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISTRICT OF COLUMBIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLORIDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLORIDA (Counties west of Apalachicola River)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEORGIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDAHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILLINOIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILLINOIS (Northern counties)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILLINOIS (southern)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILLINOIS (Southern counties)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KANSAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KANSAS (KANSAS CITY ONLY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KENTUCKY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KENTUCKY (western)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOUISIANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANITOBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARYLAND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Product_Line__r.Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <formula>Product_Line__r.Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Description__c</fullName>
        <formula>Product_Line__r.Product_Line_Description__c</formula>
        <label>Product Line Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Line</label>
        <referenceTo>Product_Line__c</referenceTo>
        <relationshipLabel>Authorized Products</relationshipLabel>
        <relationshipName>Authorized_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Authorized Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Distribution_Territory__c</columns>
        <columns>Product_Line_Description__c</columns>
        <columns>Product_Line__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APR-{0000000}</displayFormat>
        <label>Authorized Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>